# TradeVerse

./: .gitignore  CMakeLists.txt  generate_portfolio.py  server.cpp  start.bat
.cph/: .A_Zero_Sum.cpp_d7c838c9656b43d18430d8be03dd73d4.prob
scripts/: client.py  data.py  generate_portfolio.py  send_command.py
src/cpp/: greeks.cpp  greeks.hpp  portfolio.cpp  portfolio.hpp  server.cpp
